package org.example;

public class RecuperacaoContatosException extends Exception {
    public RecuperacaoContatosException(String msg){
        super(msg);
    }
}
