package org.example;

public class SalvarContatosException extends Exception {
    public SalvarContatosException(String msg){
        super(msg);
    }
}
