package org.example;

public class contatoInexistenteException extends Exception {
    public contatoInexistenteException(String msg){
        super(msg);
    }
}
